# garagem

./: db.sqlite3  pyproject.toml
config/: urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0003_acessorio.py  0004_cor.py  0005_veiculo.py  0006_alter_acessorio_options_alter_cor_options_and_more.py  0007_alter_acessorio_options_alter_cor_options_and_more.py
